# cpp-project

./: CMakeLists.txt  timespent_joachim.csv  timespent_maikel.csv
engine/include/libgba-sprite-engine/sprites/: sprite.h
engine/src/sprites/: sprite.cpp  sprite_manager.cpp
mathbender/: CMakeLists.txt  readme.md
mathbender/src/: Attack.h  Boss.cpp  Boss.h  EndScreen.cpp  EndScreen.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Level.cpp  Level.h  Level1Screen.cpp  Level1Screen.h  MainScreen.cpp  MainScreen.h  Player.cpp  Player.h  StartScreen.cpp  StartScreen.h  main.cpp
mathbender/src/Entity/: Attack.h  Ball.cpp  Ball.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  Entity.h  Fire.cpp  Fire.h  Fireball.cpp  Fireball.h  Player.cpp  Player.h  Water.cpp  Water.h  sprites.cpp
mathbender/src/Sound/: avatar3.h
mathbender/src/Sprite/: SpriteBall.h  kul.h  level1BG.h  mainScreenBG.h  player.h  sprites.h  test.h
mathbender/src/sprites/: SpriteBoss.h  kul.h
